--- a/scss/_settings.scss
+++ b/scss/_settings.scss
@@ -50,6 +50,10 @@
 
 // a. Base
 // - - - - - - - - - - - - - - - - - - - - - - - - -
+$body-font-color: #444;
+$body-font-family: "Georgia", "Cambria", Times New Roman, Times, serif;
+$paragraph-font-size: .75rem;
+$header-font-family: "Proxima Nova","Helvetica Neue","Helvetica",Helvetica,Arial,sans-serif;
 
 // This is the default html and body font-size for the base rem value.
 // $rem-base: 16px;
